# llm-extraction-patterns

./: .env.example  .gitignore  ORGANIZATION_SUMMARY.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  LOCAL_MODELS.md  MIGRATION_GUIDE.md  PATTERNS_OVERVIEW.md  RETRY_STRATEGIES.md  VALIDATION_STRATEGIES.md
examples/: __init__.py  simple_iev.py  telephone_game.py  telephone_game_workflow.py
src/core/: __init__.py  abstractions.py  extraction_strategies.py  extractor_formatters.py  graph_builder.py  json_repair.py  llm_adapter.py  llm_client_adapter.py  llm_factory.py  llm_helpers.py  logger.py  mcp_tools.py  metrics.py  node_base.py  retry_strategies.py  types.py
src/patterns/: __init__.py
src/patterns/agentic_rag/: retriever.py
src/patterns/core/: __init__.py  llm_client.py  memory.py  types.py
src/patterns/evaluator_optimizer/: __init__.py  graph.py  prompts.py
src/patterns/iev/: __init__.py  graph.py
src/patterns/iev/nodes/: __init__.py  extraction_node.py  intelligence_node.py  verification_node.py
src/patterns/local_models/: README.md  __init__.py
src/patterns/orchestrator/: __init__.py  orchestrator.py
src/patterns/patterns/: __init__.py
src/patterns/system2/: example.py  flow.py
src/patterns/two_model/: README.md  __init__.py  example.py  nodes.py
src/patterns/utils/: __init__.py  test_helpers.py
src/patterns/workflows/: __init__.py  workflow.py  workflow_components.py
tests/: __init__.py  test_base_node.py  test_evaluator_optimizer.py  test_iev.py  test_llm_adapter.py  test_nodes.py  test_strategies.py  test_two_model.py  test_workflow.py
(+38 files in other folders)
